@@ -7,6 +7,7 @@ core:
 
 inventory:
 * fix error message while starting fusioninventory-inventory script
+* fix #667: LG tv monitor inventory failure
 
 2.5 Fri, 12 Apr 2019
 
